--- a/src/layout-forceatlas2/package.json
+++ b/src/layout-forceatlas2/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "graphology-layout-forceatlas2",
+  "name": "@visdauas/graphology-layout-forceatlas2",
   "version": "0.8.1",
   "description": "ForceAtlas 2 layout algorithm for graphology.",
   "main": "index.js",
@@ -21,7 +21,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/graphology/graphology.git"
+    "url": "git+https://github.com/Slaying-Gitcoin/graphology.git"
   },
   "keywords": [
     "graph",
